# nanobot

./: .clawrc  .conflict-files  .dockerignore  .editorconfig  .env.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .koyebignore  .pre-commit-config.yaml  .ralphrc  .secrets.baseline  .trivyignore  A2A_SPEC.md  AGENTS.md  ALARMES_IMPLEMENTACAO.md  API_CHAT_USAGE_ZH.md  ARCHITECTURE.md  ARCHITECTURE.mmd  AUDIT_SUMMARY.md  BUGFIX_REPORT.md  CHANGELOG.md  CLAUDE.md  CODE_QUALITY_ANALYSIS_REPORT.md  CODE_REVIEW_ISSUES.md  COMMANDS.md  COMMUNICATION.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Dockerfile.orghi  Dockerfile.twilio  FINAL_MARKET_TOOLS_TEST.md  FITSEC.md  FORK_MAINTENANCE.md  FRANK.md  IMAGE_GENERATION_SUMMARY.md  IMAGE_GENERATION_TRUTH.md  IMAGE_TOOLS_TEST_REPORT.md  (+128 more)
.agent/: cron-session-memory.md  design.md  gepa.md  gotchas.md  hermes-design.md  security.md
.claude/: hooks.json  settings.json  settings.local.json  worklog_pending.txt
.claw/: AGENT.md  PROMPT.md  WORKPLAN.md  config.yaml
.codex/: config.toml
.full-review-archived-20260318-155645/: 00-scope.md  01-quality-architecture.md  02-security-performance.md  03-testing-documentation.md  04-best-practices.md  05-final-report.md  state.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.qwen/: settings.json  settings.json.orig
.ralph/: AGENT.md  PROMPT.md  fix_plan.md
TODO/: 0316-web-settings-plan.md  0316_ui.md
agenthifive_nanobot/: __init__.py  adapter.py  approval_poller.py  auth.py  hooks.py  pending_store.py  result_injector.py  types.py  vault_client.py
artifacts/: command.sh  create_image.sh
blackcat/: __init__.py  blackcat.py  config_base.py
brain/: brain.md  faq.md  judging.md  logistics.md  mentors.md  rooms.md  rules.md  schedule.md  tracks.md  workshops.md
bridge/: README.md  package-lock.json  package.json  pnpm-lock.yaml  simplex_bridge.py  simplex_receiver.py
case/: memory_eval_baseline.json  memory_eval_cases.json  memory_seed_events.jsonl  memory_seed_profile.json
codebase-analysis-docs/: API_REFERENCE.md  ARCHITECTURE.md  CODEBASE_KNOWLEDGE.md  README.md
config/: crontab.example  notification.example.json
crm_mcp_server/: README.md  pyproject.toml
crm_mcp_server/crm_mcp_server/: __init__.py  __main__.py  business_chances.py  contract.py  daily_report.py  diagnostics.py  graphql.py  projects.py  real_smoke.py  redaction.py  report_context.py  report_drafts.py  report_write.py  schemas.py  server.py  stdio_server.py  tool_runtime.py
crm_mcp_server/tests/: test_daily_report_facts.py  test_forbidden_mutation.py  test_forbidden_tools.py  test_list_business_chances.py  test_list_projects.py  test_mcp_entrypoint.py  test_read_contract.py  test_real_smoke.py  test_redaction.py  test_report_context.py  test_report_drafts.py  test_report_write.py  test_server_skeleton.py  test_smoke_check.py  test_stdio_server.py  test_tool_runtime.py
date_arrange/: Dockerfile.api  README.md  __init__.py  demo.py  deploy.bat  deploy.sh  docker-compose.yml  integration_guide.md  nginx.conf  requirements.txt  前端集成技术方案.md
deploy/: caddy-snippet.conf  deploy.sh  migrate-from-systemd.sh  prometheus-snippet.yml
desktop/: README.md  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs
docker/: .env.example  Dockerfile.browser  docker-compose.browser.yml  entrypoint.sh
docs/: BROWSER_TOOLS.md  CHANNEL_PLUGIN_GUIDE.md  CONTEXTMEMORY.md  DISCORD_SETUP.md  DOCKER_CONNECTORS.md  EXPERIMENTS.md  LANGSMITH.md  MEMORY.md  MESSAGE_HEAP_WORKERS.md  MSTEAMS.md  PROJECT.md  PROVIDERS.md  PROVIDER_PLUGIN_GUIDE.md  PROVIDER_RETRY.md  PYTHON_SDK.md  README.md  README_ES.md  README_RU.md  SELF_DEVELOPMENT.md  SKILL_EVOLUTION_TEST_CASES.md  SKILL_EVOLUTION_TRIGGER_MECHANISM.md  TWILIO_WHATSAPP_SETUP.md  USER_HOOKS.md  VIDEO_FIXES.md  WEB_UI_IMPLEMENTATION.md  WHATSAPP_DOCKER_SETUP.md  agent-intelligence-layers.md  architecture-review-2026-03.md  architecture.md  auth.md  automations.md  behavioral-learning.md  branch-protection.md  changelog-2026-02-05.md  channel-package-guide.md  channel-plugin-guide.md  chat-apps.md  chat-commands.md  cli-reference.md  code-principle.md  (+66 more)
dokploy/: README.md  docker-compose.yml  dokploy-config.json  meta.json  template.toml
experiment_docker/: .dockerignore  Dockerfile  README.md  __init__.py  __main__.py  docker-compose.yml  pyproject.toml  run_llm_comparison.py
experiment_docker/orchestrator/: __init__.py  aggregator.py  batch_executor.py  config.py  runner.py
experiment_docker/results/: .gitkeep
experiment_docker/results/raw/: results_20260329_154101.json  results_20260329_154207.json  results_20260329_154302.json  results_20260329_155753.json  results_20260330_221600.json  results_20260330_221644.json  results_20260330_225250.json  results_20260330_225503.json  results_20260330_225801.json  results_20260330_233015.json  results_20260331_002955.json  results_20260331_003504.json  results_20260331_004817.json
experiment_docker/results/report/: report_20260329_154302.json  report_20260329_155753.json  report_20260330_221600.json  report_20260330_221644.json  report_20260330_225250.json  report_20260330_225503.json  report_20260330_225801.json  report_20260330_233016.json  report_20260331_002955.json  report_20260331_003504.json  report_20260331_004817.json
experiment_docker/shared/configs/: Agent_SW_CG.json  Agent_SW_FG.json  Agent_VR_CG.json  Agent_VR_FG.json
experiment_docker/shared/data/: README.md  financial.csv  reviews.csv  sales.csv  user_behavior.csv
mcp-servers/paperclip/: pyproject.toml
mcp-servers/paperclip/src/nanobot_mcp_paperclip/: __init__.py  client.py  server.py
plugins/nanobot-graphiti/: pyproject.toml
plugins/nanobot-graphiti/nanobot_graphiti/: __init__.py  backend.py  config.py  tools.py
plugins/nanobot-graphiti/tests/: conftest.py  test_backend.py  test_tools.py
(+4259 files in other folders)
