[project]
name = "nanobot-ai"
version = "0.2.0"
description = "A personal AI assistant framework"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "nanobot contributors"}
]
keywords = ["ai", "agent", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "typer>=0.20.0,<1.0.0",
    "litellm>=1.81.5,<2.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "websockets>=16.0,<17.0",
    "websocket-client>=1.9.0,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "readability-lxml>=0.8.4,<1.0.0",
    "markdownify>=1.2.0,<2.0.0",
    "rich>=14.0.0,<15.0.0",
    "croniter>=6.0.0,<7.0.0",
    "python-telegram-bot[socks]>=22.0,<23.0",
    "socksio>=1.0.0,<2.0.0",
    "slack-sdk>=3.39.0,<4.0.0",
    "slackify-markdown>=0.2.0,<1.0.0",
    "python-socks[asyncio]>=2.8.0,<3.0.0",
    "prompt-toolkit>=3.0.50,<4.0.0",
    "mcp>=1.26.0,<2.0.0",
    "json-repair>=0.57.0,<1.0.0",
    "sqlite-vec>=0.1.7",
    "langfuse>=4.0.0,<5.0.0",
    "duckdb>=1.0.0,<2.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "sse-starlette>=2.0.0,<3.0.0",
    "onnxruntime>=1.17.0,<2.0.0",
    "tokenizers>=0.15.0,<1.0.0",
]

[project.optional-dependencies]
oauth = [
    "oauth-cli-kit>=0.1.3,<1.0.0; python_version >= '3.11'",
]

pptx = [
    "python-pptx>=1.0.0,<2.0.0",
]

prometheus = [
    "prometheus-client>=0.20",
]

dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pytest-timeout>=2.3.0,<3.0.0",
    "ruff>=0.9.0,<1.0.0",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[project.scripts]
nanobot = "nanobot.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanobot"]

[tool.hatch.build.targets.wheel.sources]
"nanobot" = "nanobot"

# Include non-Python files in skills and templates
[tool.hatch.build]
include = [
    "nanobot/**/*.py",
    "nanobot/py.typed",
    "nanobot/templates/**/*.md",
    "nanobot/skills/**/*.md",
    "nanobot/skills/**/*.sh",
]

[tool.hatch.build.targets.sdist]
include = [
    "nanobot/",
    "bridge/",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel.force-include]
"bridge" = "nanobot/bridge"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "UP035",  # typing → collections.abc imports (large-scale, deferred)
    "UP037",  # quoted annotations (deferred — needs audit per file)
    "B905",   # zip() strict= (deferred — low risk)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 60
markers = [
    "golden: golden regression tests (frozen behavior baselines)",
    "contract: contract tests for core abstractions",
    "llm: tests requiring a real LLM API key (skipped when unavailable)",
    "integration: integration tests (cross-subsystem, require LLM API key)",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true

# FastAPI route handlers and web glue use complex return types (StreamingResponse,
# JSONResponse, async generators) that are difficult to annotate without importing
# starlette internals. Suppress here; tighten in a follow-up.
[[tool.mypy.overrides]]
module = "nanobot.web.*"
disallow_untyped_defs = false

[tool.coverage.run]
source = ["nanobot"]
omit = ["nanobot/templates/*"]

[tool.coverage.report]
fail_under = 84  # Temporarily lowered during Phase 1 deletion; restore to 85 after Phase 3
show_missing = true
skip_empty = true

# ---------------------------------------------------------------------------
# Semantic Release — automated versioning from conventional commits
# ---------------------------------------------------------------------------

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["nanobot/__init__.py:__version__"]
branch = "main"
commit_message = "chore(release): v{version}"
build_command = false
tag_format = "v{version}"

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "style", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
