[project]
name = "crm-mcp-server"
version = "0.1.0"
description = "Mock-mode CRM report assistant MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["mcp>=1.26.0,<2.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crm_mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
