[package]
name = "nanobot-desktop"
version = "0.1.0"
description = "nanobot Desktop — ultra-lightweight personal AI assistant"
authors = ["nanobot contributors"]
edition = "2021"

[lib]
name = "nanobot_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "^2.8.2", features = ["tray-icon"] }
tauri-plugin-dialog = "~2"
tauri-plugin-opener = "~2.5"
tauri-plugin-global-shortcut = "~2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
