[project]
name = "nanobot-mcp-paperclip"
version = "0.1.0"
description = "MCP server exposing Paperclip API as tools for nanobot agents"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "nanobot contributors"}]

dependencies = [
    "mcp>=1.26.0,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pydantic>=2.12.0,<3.0.0",
]

[project.scripts]
nanobot-mcp-paperclip = "nanobot_mcp_paperclip.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nanobot_mcp_paperclip"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
