[project]
name = "nanobot-graphiti"
version = "0.1.0"
description = "Graphiti temporal memory backend for nanobot"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "nanobot-ai>=0.1.4",
    "graphiti-core>=0.3",
    "kuzu>=0.9",
]

[project.entry-points."nanobot.memory"]
graphiti = "nanobot_graphiti:GraphitiMemoryBackend"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanobot_graphiti"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
